results/experiments/11_90_incorrect/1469/2026-04-29_08-12-43/selection/batfish/candidate_2_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1469/2026-04-29_08-12-43/candidates: candidate_2 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=amsterdam [10.0.0.33->100.0.8.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.84, Routes: [ospfE2 (Network: 100.0.8.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.84)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet3/0 with resolved next-hop IP: 10.0.0.44, Routes: [ospfE2 (Network: 100.0.8.0/24, Next Hop: interface FastEthernet3/0 ip 10.0.0.44)]), TRANSMITTED(FastEthernet3/0)), (RECEIVED(FastEthernet [...]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]
